<resources>
    <string name="app_name">Banca</string>
    <string name="pull_to_refresh_pull_label">Desliza hacia abajo para refrescar...</string>
    <string name="pull_to_refresh_release_label">Suelta para refrescar...</string>
    <string name="pull_to_refresh_refreshing_label">Cargando...</string>
    <string name="pull_to_refresh_tap_label">Toque para refrescar...</string>
    <string name="hello">Hello World, SectionListActivity!</string>
    <string name="standard_list">Standard</string>
    <string name="empty_list">Empty</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activity_chooser_view_dialog_title_default">Select activity</string>
    <string name="abs__share_action_provider_share_with">Share with...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="estimado">Estimado(a):</string>
    <string name="home">HOME</string>
    <string name="banca">MI BANCO</string>
    <string name="localizador">LOCALIZADOR</string>
    <string name="ayuda">AYUDA</string>
    <string name="acceso">Acceso</string>
    <string name="banca_movil">a la Banca Móvil</string>
    <string name="err_login_no_text">Por favor introduzca su nombre de usuario y clave de acceso.</string>
    <string name="header_login">Acceso a Banca Santander</string>
    <string name="cuenta_corriente">Cuenta corriente</string>
    <string name="saldo_disponible">Saldo disponible</string>
    <string name="buscar_por_fecha">Buscar por fecha</string>
    <string name="todos">Todos</string>
    <string name="abonos">Abonos</string>
    <string name="cargos">Cargos</string>
    <string name="total_saldo_disponible">Total saldo disponible:</string>
    <string name="total_cupo_disponible">Total cupo disponible:</string>
    <string name="indicators_day">Del día</string>
    <string name="indicadores_bajas">Mayores bajas</string>
    <string name="indicadores_alzas">Mayores alzas</string>
    <string name="date">FECHA</string>
    <string name="indicator">INDICADOR</string>
    <string name="value">VALOR</string>
    <string name="var">VAR. %</string>
    <string name="tasas_captacion">TASAS DE CAPTACIÓN</string>
    <string name="cuenta_origen">Cuenta de origen</string>
    <string name="cuenta_destino">Cuenta de destino</string>
    <string name="ok">OK</string>
    <string name="cargando">Cargando...</string>
    <string name="mapa">Mapa</string>
    <string name="lista">Lista</string>
    <string name="Seleccion_entorno">Selección de entorno</string>
    <string name="entorno_homologacion">Homologación</string>
    <string name="entorno_produccion">Producción</string>
    <string name="nacional">Nacional</string>
    <string name="internacional">Internacional</string>
    <string name="nombre_comercio">Nombre del comercio</string>
    <string name="tipo_transaccion">Tipo de transacción</string>
    <string name="rubro_comercio">Rubro comercio</string>
    <string name="ciudad">Ciudad</string>
    <string name="tipo_beneficiario">Tipo de beneficiario</string>
    <string name="entre_mis_productos">Propios</string>
    <string name="a_terceros">A terceros</string>
    <string name="supergiros">Supergiros</string>
    <string name="monto">Monto</string>
    <string name="monto_instrucciones">Sin puntos ni guiones</string>
    <string name="aceptar">Aceptar</string>
    <string name="compras_no_reconocidas">Compras no reconocidas</string>
    <string name="compras_no_reconocidas_texto">Llame al 800 20 7000 o (600) 320 3000 o bien directamente a través de la sucursal</string>
    <string name="llamar_800207000">Llamar al 800 20 7000</string>
    <string name="llamar_6003203000">Llamar al (600) 320 3000</string>
    <string name="llamar_extranjero">Desde el extranjero llame al (562) 2320 3000</string>
    <string name="llamar_5623203000">Llamar al (562) 2320 3000</string>
    <string name="o_numeros_emergencia">O a los números de emergencia de cada marca</string>
    <string name="mastercard">MasterCard</string>
    <string name="visa">VISA</string>
    <string name="americanexpress">American Express</string>
    <string name="desde_eeuu_canada">Desde EEUU y Canadá</string>
    <string name="desde_india">Desde India</string>
    <string name="desde_otro">Desde otro país</string>
    <string name="bloqueo_tarjetas">Bloqueo Tarjetas de Débito (Redbanc / RedCompra)</string>
    <string name="bloqueo_llame">Desde Chile llame al 800 20 7000 o (600) 320 3000</string>
    <string name="emergencias_bancarias">Emergencias Bancarias</string>
    <string name="orden_no_pago_cheques">Orden de No Pago Cheques</string>
    <string name="no_pago_cheques_texto">"Debe llamar a VOX (600) 320 3000 o bien en forma personal en cualquier sucursal del Banco.
Además se debe hacer una denuncia policial"</string>
    <string name="servicio_cliente">Servicio al Cliente</string>
    <string name="conozca_vox">Conozca todo lo que puede hacer en VOX</string>
    <string name="horarios_atencion">"Horarios de Atención:
Días hábiles: 8:00 - 21:00 hrs · Días no hábiles: 9:00 - 18:00 hrs"</string>
    <string name="loc_actual">Localización:</string>
    <string name="filtros">Filtros</string>
    <string name="otra_localizacion">Otra localización</string>
    <string name="mostrar_suc_caj">Sucursales y cajeros</string>
    <string name="mostrar_ofertas_imperdibles">Súper Descuentos</string>
    <string name="empresa">Empresa</string>
    <string name="descripcion">Descripción</string>
    <string name="cuentas">CUENTAS</string>
    <string name="tarjetas_credito">TARJETAS DE CRÉDITO</string>
    <string name="linea_credito">LINEAS DE CRÉDITO</string>
    <string name="inversiones">INVERSIONES</string>
    <string name="credito_consumo">CRÉDITO DE CONSUMO</string>
    <string name="solicitelo_aqui">Solicítelo aquí</string>
    <string name="inst_recarga1">Recarga de móvil prepago y cuenta controlada</string>
    <string name="inst_recarga2">Ingrese código más número de celular</string>
    <string name="inst_recarga3">Ej: 81234567 (8 dígitos)</string>
    <string name="numero">Número</string>
    <string name="email">E-mail</string>
    <string name="email_hint">Ingrese E-mail</string>
    <string name="seleccione_operador">Seleccione operador</string>
    <string name="recarga_de_movil">Recarga de Móvil</string>
    <string name="prepago_y_cuenta">Prepago y cuenta controlada</string>
    <string name="saldo_contable">Saldo contable</string>
    <string name="saldo_contable_2p">Saldo contable:</string>
    <string name="s_contable_2p">S.Contable:</string>
    <string name="monto_recargar">Monto a recargar</string>
    <string name="help_recarga_1">Asegúrese de que el número de su Super Clave es</string>
    <string name="help_recarga_2">y luego ingrese las coordenadas solicitadas</string>
    <string name="confirmar">Confirmar</string>
    <string name="sr">Sr(a)</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="codigo_trans">Código transacción</string>
    <string name="help_report_recarga1">Hemos enviado el comprobante de pago a la dirección de email</string>
    <string name="help_report_recarga2">ingresada por usted al momento de inscribir esta cuenta.</string>
    <string name="volver_saldos">Volver a Saldos Consolidados</string>
    <string name="volver">Volver</string>
    <string name="id_cliente">Id. Cliente</string>
    <string name="deuda_pagada">Estimado cliente, la deuda que está consultando se encuentra pagada</string>
    <string name="fecha_de_pago">Fecha de pago</string>
    <string name="a_pagar">A pagar</string>
    <string name="vence">Vence</string>
    <string name="pagar">Pagar</string>
    <string name="confirmar_pago">Confirmar pago</string>
    <string name="consulta_n">Consulta Nº</string>
    <string name="transaccion_n">Transacción Nº</string>
    <string name="ultimos_destinatarios">Últimos destinatarios</string>
    <string name="banco">Banco</string>
    <string name="tipo_cuenta">Tipo de cuenta</string>
    <string name="tipo_cuenta_2p">Tipo de cuenta:</string>
    <string name="rut">Rut</string>
    <string name="nombre">Nombre</string>
    <string name="cuenta">Cuenta</string>
    <string name="monto_maximo">Su monto máximo a transferir en este día es de $200.000</string>
    <string name="costo_supergiro_1">Este envío de dinero tiene un costo de $990</string>
    <string name="costo_supergiro_2">IVA incluido, los que serán cargados en su cuenta corriente o cuenta vista, una vez retirado el dinero del cajero automático.</string>
    <string name="validar_monto_supergiro">El monto debe estar entre $5.000 y $200.000</string>
    <string name="validar_monto_supergiro_multiplo">Estimado Cliente: El monto a transferir debe ser múltiplo de 5.000</string>
    <string name="transf_mis_productos">Transferencia a mis productos</string>
    <string name="monto_a_transferir">Monto a transferir</string>
    <string name="origen">Origen</string>
    <string name="destino">Destino</string>
    <string name="nro_cuenta">Nº Cuenta</string>
    <string name="saldo">Saldo</string>
    <string name="saldo_2p">Saldo:</string>
    <string name="linea_2p">Línea:</string>
    <string name="ingrese_clave">Ingrese Clave</string>
    <string name="confirmar_transferencia">Confirmar transferencia</string>
    <string name="moneda">Moneda:</string>
    <string name="envio_comprobante">Envío de comprobante</string>
    <string name="su_email">Su e-mail</string>
    <string name="destinatario">Destinatario</string>
    <string name="comentario">Comentario</string>
    <string name="ingrese_comentario">Ingrese su comentario (opcional)</string>
    <string name="monto_transferido">Monto transferido</string>
    <string name="help_transfer_email_1">Hemos enviado el comprobante a la dirección de email</string>
    <string name="help_transfer_email_2">ingresada por usted al momento de inscribir esta cuenta.</string>
    <string name="transferencia_a_terceros">Transferencia a terceros</string>
    <string name="id_transfer">ID</string>
    <string name="help_clave_3_1">Hemos enviado una CLAVE 3.0 a su teléfono celular</string>
    <string name="help_clave_3_1_mail">Hemos enviado una CLAVE 3.0 a su email</string>
    <string name="help_clave_3_2">registrado en el Banco. Esta clave es válida sólo para esta operación y debe ser ingresada en los próximos minutos en esta misma pantalla. Esta clave no es la clave de acceso a internet. No cierre esta página hasta ingresar la CLAVE 3.0, de lo contrario esta operación no se realizará.</string>
    <string name="id">ID</string>
    <string name="Ingrese_clave_3">Ingrese aquí la CLAVE 3.0</string>
    <string name="ajustes">Ajustes</string>
    <string name="version_actual">Versión actual</string>
    <string name="ruta_defecto_localizador">Ruta por defecto en el localizador</string>
    <string name="conduciendo">Conduciendo</string>
    <string name="caminando">Caminando</string>
    <string name="loc_activa_home">Localización activa en home</string>
    <string name="acerca_de">Acerca de</string>
    <string name="seleccione_desde">Seleccione fecha desde</string>
    <string name="cancelar">Cancelar</string>
    <string name="ultimos_movimientos">Últimos movimientos</string>
    <string name="buscar">Buscar</string>
</resources>