<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="12.0sp" android:textColor="#ff000000" android:id="@id/tv_recarga_form_instrucciones1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inst_recarga1" />
    <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:id="@id/tv_recarga_form_instrucciones2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inst_recarga2" />
    <TextView android:textSize="12.0sp" android:textColor="#ff666666" android:id="@id/tv_recarga_form_instrucciones3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/inst_recarga3" />
    <LinearLayout android:orientation="horizontal" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
        <LinearLayout android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="3.0">
            <TextView android:textColor="#ff333333" android:id="@id/tv_recarga_form_numero" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/numero" />
        </LinearLayout>
        <LinearLayout android:gravity="center|right" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0">
            <EditText android:textSize="12.0dip" android:id="@id/et_recarga_form_numero" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/monto_instrucciones" android:lines="1" android:maxLength="8" android:layout_weight="1.0" android:inputType="number">
                <requestFocus />
            </EditText>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
        <LinearLayout android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="3.0">
            <TextView android:textColor="#ff333333" android:id="@id/tv_recarga_form_monto" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/monto" />
        </LinearLayout>
        <LinearLayout android:gravity="center|right" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0">
            <EditText android:textSize="12.0dip" android:id="@id/et_recarga_form_monto" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/monto_instrucciones" android:lines="1" android:layout_weight="1.0" android:inputType="number" />
            <Spinner android:id="@id/sp_recarga_form_montos" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip">
        <LinearLayout android:gravity="center|left" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="3.0">
            <TextView android:textColor="#ff333333" android:id="@id/tv_recarga_form_mail" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:text="@string/email" />
        </LinearLayout>
        <LinearLayout android:gravity="center|right" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="2.0">
            <EditText android:textSize="12.0dip" android:id="@id/et_recarga_form_email" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email_hint" android:lines="1" android:layout_weight="1.0" android:inputType="textWebEmailAddress" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>