<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="top" android:orientation="vertical" android:id="@id/ly_selector_entorno" android:background="@drawable/splash_screen_android" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center" android:orientation="vertical" android:id="@id/ll_contenedor_entorno" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="50.0dip">
        <TextView android:textSize="30.0dip" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_selecciona_entorno" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/Seleccion_entorno" android:layout_weight="3.0" />
        <Button android:textSize="25.0dip" android:textColor="@color/grey_texts_symple" android:id="@id/bt_desarrollo" android:background="@drawable/button_seleccionaentorno" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/entorno_homologacion" android:layout_weight="3.0" />
        <Button android:textSize="25.0dip" android:textColor="@color/grey_texts_symple" android:id="@id/bt_produccion" android:background="@drawable/button_seleccionaentorno" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip" android:text="@string/entorno_produccion" android:layout_weight="3.0" />
    </LinearLayout>
</LinearLayout>